Making HR/Mentors Profile Pages

--- a/src/app/modules/developer/Components/hr-card/hr-card.component.html
+++ b/src/app/modules/developer/Components/hr-card/hr-card.component.html
@@ -7,6 +7,10 @@
   <p class="category-client"> Department:  {{hr.category}}</p>
   <p class="category-client"> Rate: <app-rate [value]="hr.rate"></app-rate></p>
   <p class="price-client">Session Price:  ${{ hr.currentprice}}</p>
+  <br>
+  <button type="button" class="btn btn-dark" [routerLink]="['/hr', hr.id]" routerLinkActive="active">
+    <i class="fas fa-user"></i> View Profile
+  </button>
 
   <div class="social-media">
       <a href="#">
