--- a/src/app/modules/developer/Components/mentor-list/mentor-list.component.html
+++ b/src/app/modules/developer/Components/mentor-list/mentor-list.component.html
@@ -19,16 +19,19 @@
     <div class="col-md-3">
       <form class="form-inline d-flex flex-column align-items-start">
         <!-- HR Name Input -->
+        <h4 class="mb-3">Mentor-Name</h4>
         <div class="form-group mb-3">
-          <input class="form-control" placeholder="HR Name" type="text">
+          <input class="form-control" placeholder="Mentor Name" type="text">
         </div>
 
         <!-- HR Role Input -->
+        <h4 class="mb-3">Mentor-Role</h4>
         <div class="form-group mb-3">
-          <input class="form-control" placeholder="HR Role" type="text">
+          <input class="form-control" placeholder="Mentor Role" type="text">
         </div>
 
         <!-- Department Dropdown -->
+        <h4 class="mb-3">Department</h4>
         <div class="form-group mb-3">
           <select class="form-select" style="border: 2px solid #1c4980;">
             <option selected>Select Department</option>
