--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -7,7 +7,7 @@
                 <a href="#"> <img class="h-20px" src="" alt="logo"> </a>
                 <p class="text-white">If you want a guide on your journey as a developer, you are in the right place</p>
             </div>
-            
+
             <!-- Links and Social Media Links -->
             <div class="col-md-8 text-center mb-3 mb-md-0">
                 <div class="row">
@@ -23,7 +23,7 @@
                         <span class="text-white mx-2 my-1">|</span>
                         <a routerLink="/developer/mentors" class="text-white text-decoration-none mx-2 my-1">Mentor</a>
                         <span class="text-white mx-2 my-1">|</span>
-                        <a routerLink="/developer/hr-s" class="text-white text-decoration-none mx-2 my-1">HR</a>
+                        <a routerLink="/developer/hr" class="text-white text-decoration-none mx-2 my-1">HR</a>
                         <span class="text-white mx-2 my-1">|</span>
                         <a href="#" class="text-white text-decoration-none mx-2 my-1">Help</a>
                     </div>
