--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -39,7 +39,7 @@
         </div>
       }
     </div>
-    
+
     <div class="collapse navbar-collapse order-lg-1" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -49,7 +49,7 @@
           <a class="nav-link" routerLink="/developer/mentors">Mentor</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/developer/hr-s">HR</a>
+          <a class="nav-link" routerLink="/developer/hr">HR</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="/developer/aboutus">About Us</a>
@@ -62,7 +62,7 @@
           <li class="nav-item d-lg-none d-block"><a class="nav-link" routerLink="/developer/login">Login</a></li>
           <li class="nav-item d-lg-none d-block"><a class="nav-link" routerLink="/developer/register">Register</a></li>
         }
-      
+
       </ul>
     </div>
   </div>
