--- a/src/app/modules/developer/Components/booking-confirmation/booking-confirmation.component.html
+++ b/src/app/modules/developer/Components/booking-confirmation/booking-confirmation.component.html
@@ -1,107 +1,89 @@
 <!-- <section class="pt-4"> -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-xl-8 mx-auto">
-
-            <div class="card shadow">
-                <!-- Image -->
-                <img src="confirmation_b.jpg" class="rounded-top" alt="">
-
-                <!-- Card body -->
-                <div class="card-body text-center p-4">
-                    <!-- Title -->
-                    <h1 class="card-title fs-2">🎊 Congratulations! 🎊</h1>
-                    <p class="lead mb-3">Your Session has been booked</p>
-
-                    <!-- Second title -->
-                    <h5 class="text-primary mb-4">We Excited to<br> Achieving Great Results Together</h5>
-
-                    <!-- List -->
-                    <div class="row justify-content-between text-start mb-4">
-                        <div class="col-lg-5">
-                            <ul class="list-group list-group-borderless">
-                                <li class="list-group-item d-sm-flex justify-content-start align-items-center">
-
-                                    <img class="rounded-circle shadow" src="05 (1).jpg"
-                                        style="width: 50px; height: 50px;" alt="avatar">
-
-                                    <span class="h6 fw-normal mb-0 ps-3 ">Eng Heba Samy</span>
-                                </li>
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="bi bi-vr fa-fw me-2 muted"></i>Booking ID:</span>
-                                    <span class="h6 fw-normal mb-0">BS-58678</span>
-                                </li>
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="bi bi-person fa-fw me-2"></i>Booked by:</span>
-                                    <span class="h6 fw-normal mb-0">Frances Guerrero</span>
-                                </li>
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="fas fa-laptop-code me-2"></i>Session In:</span>
-                                    <span class="h6 fw-normal mb-0">Angular</span>
-                                </li>
-
-                            </ul>
+    <div class="container" #contentToConvert>
+        <div class="row">
+            <div class="col-md-10 col-xl-8 mx-auto">
+                <div class="card shadow">
+                    <!-- Image -->
+                    <img src="confirmation_b.jpg" class="rounded-top" alt="">
+                    <!-- Card body -->
+                    <div class="card-body text-center p-4" >  <!-- Add the reference here -->
+                        <!-- Title -->
+                        <h1 class="card-title fs-2">🎊 Congratulations! 🎊</h1>
+                        <p class="lead mb-3">Your Session has been booked</p>
+                        <!-- Second title -->
+                        <h5 class="text-primary mb-4">We Excited to<br> Achieving Great Results Together</h5>
+                        <!-- List -->
+                        <div class="row justify-content-between text-start mb-4">
+                            <div class="col-lg-5">
+                                <ul class="list-group list-group-borderless">
+                                    <li class="list-group-item d-sm-flex justify-content-start align-items-center">
+                                        <img class="rounded-circle shadow" src="05 (1).jpg"
+                                            style="width: 50px; height: 50px;" alt="avatar">
+                                        <span class="h6 fw-normal mb-0 ps-3 ">Eng Heba Samy</span>
+                                    </li>
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="bi bi-vr fa-fw me-2 muted"></i>Booking ID:</span>
+                                        <span class="h6 fw-normal mb-0">BS-58678</span>
+                                    </li>
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="bi bi-person fa-fw me-2"></i>Booked by:</span>
+                                        <span class="h6 fw-normal mb-0">Frances Guerrero</span>
+                                    </li>
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="fas fa-laptop-code me-2"></i>Session In:</span>
+                                        <span class="h6 fw-normal mb-0">Angular</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-5">
+                                <ul class="list-group list-group-borderless">
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="bi bi-calendar fa-fw me-2"></i>Date:</span>
+                                        <span class="h6 fw-normal mb-0">29 July 2022</span>
+                                    </li>
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="bi bi-clock me-2"></i>Session Duration:</span>
+                                        <span class="h6 fw-normal mb-0">2 Hours</span>
+                                    </li>
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="bi bi-wallet2 fa-fw me-2"></i>Payment Method:</span>
+                                        <span class="h6 fw-normal mb-0">Credit card</span>
+                                    </li>
+                                    <li class="list-group-item d-sm-flex justify-content-between align-items-center">
+                                        <span class="mb-0 muted"><i class="bi bi-currency-dollar fa-fw me-2"></i>Total Price:</span>
+                                        <span class="h6 fw-normal mb-0">$1200</span>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-
-                        <div class="col-lg-5">
-                            <ul class="list-group list-group-borderless">
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="bi bi-calendar fa-fw me-2"></i>Date:</span>
-                                    <span class="h6 fw-normal mb-0">29 July 2022</span>
-                                </li>
-
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="bi bi-clock me-2"></i>
-                                        Session Duration:</span>
-                                    <span class="h6 fw-normal mb-0">2
-                                        Hours
-                                    </span>
-                                </li>
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="bi bi-wallet2 fa-fw me-2"></i>Payment
-                                        Method:</span>
-                                    <span class="h6 fw-normal mb-0">Credit card</span>
-                                </li>
-                                <li class="list-group-item d-sm-flex justify-content-between align-items-center">
-                                    <span class="mb-0 muted"><i class="bi bi-currency-dollar fa-fw me-2"></i>Total
-                                        Price:</span>
-                                    <span class="h6 fw-normal mb-0">$1200</span>
-                                </li>
-
-                            </ul>
+    
+                        <!-- Button -->
+                        <div class="d-sm-flex justify-content-sm-end d-grid">
+                            <!-- Share button with dropdown -->
+                            <div class="dropdown me-sm-2 mb-2 mb-sm-0">
+                                <a href="#" class="btn btn-light mb-0 w-100" role="button" id="dropdownShare"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-share me-2"></i>Share
+                                </a>
+                                <!-- dropdown button -->
+                                <ul class="dropdown-menu dropdown-menu-end min-w-auto shadow rounded"
+                                    aria-labelledby="dropdownShare">
+                                    <li><a class="dropdown-item" href="#"><i class="fab fa-twitter-square me-2"></i>Twitter</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fab fa-facebook-square me-2"></i>Facebook</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fab fa-linkedin me-2"></i>LinkedIn</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="bi bi-whatsapp me-2"></i>WhatsApp</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fas fa-copy me-2"></i>Copy link</a></li>
+                                </ul>
+                            </div>
+                            <!-- Download button -->
+                            <button href="#" class="btn btn-primary mb-0" (click)="downloadAsPDF()">
+                                <i class="bi bi-file-pdf me-2"></i>Download PDF
+                            </button>
                         </div>
-                    </div>
-
-                    <!-- Button -->
-                    <div class="d-sm-flex justify-content-sm-end d-grid">
-                        <!-- Share button with dropdown -->
-                        <div class="dropdown me-sm-2 mb-2 mb-sm-0">
-                            <a href="#" class="btn btn-light mb-0 w-100" role="button" id="dropdownShare"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-share me-2"></i>Share
-                            </a>
-                            <!-- dropdown button -->
-                            <ul class="dropdown-menu dropdown-menu-end min-w-auto shadow rounded"
-                                aria-labelledby="dropdownShare">
-                                <li><a class="dropdown-item" href="#"><i
-                                            class="fab fa-twitter-square me-2"></i>Twitter</a></li>
-                                <li><a class="dropdown-item" href="#"><i
-                                            class="fab fa-facebook-square me-2"></i>Facebook</a></li>
-                                <li><a class="dropdown-item" href="#"><i class="fab fa-linkedin me-2"></i>LinkedIn</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-whatsapp me-2"></i>WhatsApp</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-copy me-2"></i>Copy link</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- Download button -->
-                        <a href="#" class="btn btn-primary mb-0"><i class="bi bi-file-pdf me-2"></i>Download PDF</a>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-</div>
-<!-- </section> -->
+    <!-- </section> -->
+    
