--- a/src/app/shared/components/update_profile/update_profile.component.html
+++ b/src/app/shared/components/update_profile/update_profile.component.html
@@ -1,15 +1,16 @@
-<div class="container py-2">
+<div class="container py-2 ">
   <div class="container mt-2">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
+    
+        <!-- <div class="card"> -->
           <div class="card-header bg-primary text-white">Login</div>
-          <div class="card-body">
+          <!-- <div class="card-body"> -->
             <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+              <!-- <div class="row justify-content-center">
+                <div class="col-md-6"> -->
               <div class="row">
                 <div class="col-lg-6">
-                  <div class="card mb-4">
-                    <div class="card-body text-center">
+                  <div class=" mb-4">
+                    <div class=" text-center">
                       <img [src]="selectedImage" alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
                       <div class="form-group mt-3">
                         <input type="file" (change)="onImageChange($event)" accept="image/*" class=" overflow-hidden rounded-circle">
@@ -22,10 +23,15 @@
                         <label for="job_Title" class="text-capitalize">job_Title:</label>
                         <input type="text" id="job_Title" formControlName="job_Title" class="form-control" />
                       </div>
+                      <div class="form-group">
+                        <label for="Portfolio" class="text-capitalize">Portfolio:</label>
+                        <textarea class="form-control" id="Portfolio" formControlName="Portfolio"></textarea>
+                      </div>
                     </div>
                   </div>
-                  <div class="card mb-4 mb-lg-0">
-                    <div class="card-body p-0">
+                  <!-- card card-body -->
+                  <!-- <div class=" mb-4 mb-lg-0">
+                    <div class=" p-0">
                       <ul class="list-group list-group-flush rounded-3">
                         <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                           <i class="fas fa-globe fa-lg text-warning"></i>
@@ -49,11 +55,11 @@
                         </li>
                       </ul>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="col-lg-6">
-                  <div class="card mb-4">
-                    <div class="card-body">
+                  <div class=" mb-4">
+                    <div class="">
                       <div class="form-group">
                         <label for="Email" class="text-capitalize">Email:</label>
                         <input type="email" id="Email" formControlName="Email" class="form-control" />
@@ -74,21 +80,29 @@
                         <label for="Experience" class="text-capitalize">Experience:</label>
                         <textarea class="form-control" id="Experience" formControlName="Experience"></textarea>
                       </div>
-                      <div class="form-group">
+                      <!-- <div class="form-group">
                         <label for="Portfolio" class="text-capitalize">Portfolio:</label>
                         <textarea class="form-control" id="Portfolio" formControlName="Portfolio"></textarea>
-                      </div>
-                      <button type="submit" class="btn btn-primary btn-rounded btn-block btn-lg m-1">
+                      </div> -->
+                      <!-- <button type="submit" class="btn btn-primary btn-rounded btn-block btn-lg m-1">
                         <i class="far fa-clock me-2"></i>Submit
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
+               <div class="containerbtn ">
+                <button type="submit" class="btn btn-primary btn-rounded btn-block btn-lg m-2 center-button  ">
+                  <i class="far fa-clock me-2 "></i>Submit
+                </button>
+               </div>
               </div>
+              
+            <!-- </div>
+          </div> -->
             </form>
           </div>
         </div>
-      </div>
-    </div>
+     
+    <!-- </div>
   </div>
-</div>
+</div> -->
