--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -3,5 +3,5 @@
   <div class="error-code"> 404</div>
   <h1>Page Not Found</h1>
   <p>Sorry, the page you are looking for does not exist. you can back to home .</p>
-  <a href="/" class="home-button">Go Back Home</a>
+  <a routerLink="developer/home" class="home-button">Go Back Home</a>
 </div>
