--- a/src/app/modules/developer/Components/finish-quiz/finish-quiz.component.css
+++ b/src/app/modules/developer/Components/finish-quiz/finish-quiz.component.css
@@ -86,3 +86,19 @@ button:hover:enabled {
     font-size: 1.5rem;
   }
 }
+
+.circle-bg {
+  stroke: #f3f3f3;
+}
+
+.circle {
+  stroke: #4CAF50;
+  stroke-linecap: round;
+  animation: progress 1s ease-out forwards;
+}
+
+@keyframes progress {
+  from {
+    stroke-dasharray: 0 100;
+  }
+}
