--- a/src/app/shared/components/update_profile/update_profile.component.html
+++ b/src/app/shared/components/update_profile/update_profile.component.html
@@ -11,21 +11,32 @@
                 <div class="col-lg-6">
                   <div class=" mb-4">
                     <div class=" text-center">
-                      <img [src]="selectedImage" alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
-                      <div class="form-group mt-3">
-                        <input type="file" (change)="onImageChange($event)" accept="image/*" class=" overflow-hidden rounded-circle">
+                      <div class="image-upload-container">
+                        <!-- Display the selected image -->
+                        <div class="image-preview" *ngIf="selectedImage">
+                          <img [src]="selectedImage" alt="Selected Image" class="preview-image">
+                        </div>
+                      
+                        <!-- Custom file upload button -->
+                        <label for="file-upload" class="custom-file-upload">
+                          <i class="fas fa-upload"></i> Upload Image
+                        </label>
+                        <input id="file-upload" type="file" (change)="onImageChange($event)"  />
                       </div>
+                      
+                      
+                      
                       <div class="form-group">
                         <label for="UserName" class="text-capitalize">UserName:</label>
-                        <input type="text" id="UserName" formControlName="UserName" class="form-control" />
+                        <input  type="text" id="UserName" formControlName="UserName" class="form-control order1" />
                       </div>
                       <div class="form-group">
                         <label for="job_Title" class="text-capitalize">job_Title:</label>
-                        <input type="text" id="job_Title" formControlName="job_Title" class="form-control" />
+                        <input  type="text" id="job_Title" formControlName="job_Title" class="form-control order1" />
                       </div>
                       <div class="form-group">
                         <label for="Portfolio" class="text-capitalize">Portfolio:</label>
-                        <textarea class="form-control" id="Portfolio" formControlName="Portfolio"></textarea>
+                        <textarea  class="form-control order1" id="Portfolio" formControlName="Portfolio"></textarea>
                       </div>
                     </div>
                   </div>
@@ -62,23 +73,23 @@
                     <div class="">
                       <div class="form-group">
                         <label for="Email" class="text-capitalize">Email:</label>
-                        <input type="email" id="Email" formControlName="Email" class="form-control" />
+                        <input class="border-color order1" type="email" id="Email" formControlName="Email" class="form-control order1 rounded" />
                       </div>
                       <div class="form-group">
                         <label for="PhoneNumber" class="text-capitalize">PhoneNumber:</label>
-                        <input type="text" id="PhoneNumber" formControlName="PhoneNumber" class="form-control" />
+                        <input  type="text" id="PhoneNumber" formControlName="PhoneNumber" class="form-control border1 rounded" />
                       </div>
                       <div class="form-group">
                         <label for="PersonalDetails" class="text-capitalize">PersonalDetails:</label>
-                        <textarea class="form-control" id="PersonalDetails" formControlName="PersonalDetails"></textarea>
+                        <textarea  class="form-control order1 rounded" id="PersonalDetails" formControlName="PersonalDetails"></textarea>
                       </div>
                       <div class="form-group">
                         <label for="Skills" class="text-capitalize">Skills:</label>
-                        <textarea class="form-control" id="Skills" formControlName="Skills"></textarea>
+                        <textarea class="form-control order1 rounded" id="Skills" formControlName="Skills"></textarea>
                       </div>
                       <div class="form-group">
                         <label for="Experience" class="text-capitalize">Experience:</label>
-                        <textarea class="form-control" id="Experience" formControlName="Experience"></textarea>
+                        <textarea  class="form-control order1 rounded" id="Experience" formControlName="Experience"></textarea>
                       </div>
                       <!-- <div class="form-group">
                         <label for="Portfolio" class="text-capitalize">Portfolio:</label>
@@ -106,3 +117,176 @@
     <!-- </div>
   </div>
 </div> -->
+<div class="container py-2 ">
+  <div class="container mt-2">
+    <div class="row g-4 mt-3">
+      <!-- Linked account START -->
+      <div class="col-lg-6">
+        <div class="card bg-transparent border rounded-3">
+          <!-- Card header -->
+          <div class="card-header bg-transparent border-bottom">
+            <h5 class="card-header-title mb-0">Linked account</h5>
+          </div>
+          <!-- Card body START -->
+          <div class="card-body pb-0">
+            <!-- Google -->
+            <div class="position-relative mb-4 d-sm-flex bg-success bg-opacity-10 border border-success p-3 rounded">
+              <!-- Title and content -->
+              <h2 class="fs-1 mb-0 me-3"><i class="fab fa-google text-google-icon"></i></h2>
+              <div>
+                <div class="position-absolute top-0 start-100 translate-middle bg-white rounded-circle lh-1 h-20px">
+                  <i class="bi bi-check-circle-fill text-success fs-5"></i>
+                </div>
+                  <h6 class="mb-1">Google</h6>
+                  <p class="mb-1 small">Connect with Facebook account for a personalized experience</p>
+                  <!-- Button -->
+                  <button type="button" class="btn btn-sm btn-danger mb-0">Connect Google</button>
+                  <a href="#" class="btn btn-sm btn-link text-body mb-0">Learn more</a>
+              </div>
+            </div>
+    
+            <!-- Linkedin -->
+            <div class="mb-4 d-sm-flex border p-3 rounded">
+              <!-- Title and content -->
+              <h2 class="fs-1 mb-0 me-3"><i class="fab fa-linkedin-in text-linkedin"></i></h2>
+              <div>
+                <h6 class="mb-1">Linkedin</h6>
+                <p class="mb-1 small">Connect with Linkedin account for a personalized experience</p>
+                <!-- Button -->
+                <button type="button" class="btn btn-sm btn-primary mb-0">Connect Linkedin</button>
+                <a href="#" class="btn btn-sm btn-link text-body mb-0">Learn more</a>
+              </div>
+            </div>
+    
+            <!-- Facebook -->
+            <div class="mb-4 d-sm-flex border p-3 rounded">
+              <!-- Title and content -->
+              <h2 class="fs-1 mb-0 me-3"><i class="fab fa-facebook text-facebook"></i></h2>
+              <div>
+                <h6 class="mb-1">Facebook</h6>
+                <p class="mb-1 small">Connect with Facebook account for a personalized experience</p>
+                <!-- Button -->
+                <button type="button" class="btn btn-sm btn-primary mb-0">Connect Facebook</button>
+                <a href="#" class="btn btn-sm btn-link text-body mb-0">Learn more</a>
+              </div>
+            </div>
+          </div>
+          <!-- Card body END -->
+        </div>
+      </div>
+      <!-- Linked account end -->
+    
+      <!-- Social media profile START -->
+      <div class="col-lg-6">
+        <div class="card bg-transparent border rounded-3">
+          <!-- Card header -->
+          <div class="card-header bg-transparent border-bottom">
+            <h5 class="card-header-title mb-0">Social media profile</h5>
+          </div>
+          <!-- Card body START -->
+          <div class="card-body">
+            <!-- Facebook username -->
+            <div class="mb-3">
+              <label class="form-label"><i class="fab fa-facebook text-facebook me-2"></i>Enter facebook username</label>
+              <input class="form-control" type="text" value="loristev" placeholder="Enter username">
+            </div>
+            
+            <!-- Twitter username -->
+            <div class="mb-3">
+              <label class="form-label"><i class="bi bi-twitter text-twitter me-2"></i>Enter twitter username</label>
+              <input class="form-control" type="text" value="loristev" placeholder="Enter username">
+            </div>
+    
+            <!-- Instagram username -->
+            <div class="mb-3">
+              <label class="form-label"><i class="fab fa-instagram text-instagram-gradient me-2"></i>Enter instagram username</label>
+              <input class="form-control" type="text" value="loristev" placeholder="Enter username">
+            </div>
+    
+            <!-- Youtube -->
+            <div class="mb-3">
+              <label class="form-label"><i class="fab fa-youtube text-youtube me-2"></i>Add your youtube profile URL</label>
+              <input class="form-control" type="text" value="https://www.youtube.com/in/Eduport-05620abc" placeholder="Enter username">
+            </div>
+    
+            <!-- Button -->
+            <div class="d-flex justify-content-end mt-4">
+              <button type="button" class="btn btn-primary mb-0">Save changes</button>
+            </div>
+          </div>
+          <!-- Card body END -->
+        </div>
+      </div>
+      <!-- Social media profile END -->
+    
+      <!-- EMail change START -->
+      <div class="col-lg-6">
+        <div class="card bg-transparent border rounded-3">
+          <!-- Card header -->
+          <div class="card-header bg-transparent border-bottom">
+            <h5 class="card-header-title mb-0">Update email</h5>
+          </div>
+          <!-- Card body -->
+          <div class="card-body">
+            <p>Your current email address is <span class="text-primary">{{ 'engmohamedabdelhakem@gmail.com' }}</span></p>
+            <!-- Email -->
+            <form>
+              <label class="form-label">Enter your new email id</label>
+              <input class="form-control" type="email" placeholder="Enter new email">
+              <div class="d-flex justify-content-end mt-4">
+                <button type="button" class="btn btn-primary mb-0">Update email</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- EMail change end -->
+       <!-- Password change START -->
+       <div class="col-lg-6">
+        <div class="card border bg-transparent rounded-3">
+          <!-- Card header -->
+          <div class="card-header bg-transparent border-bottom">
+            <h5 class="card-header-title mb-0">Update password</h5>
+          </div>
+          <!-- Card body START -->
+          <div class="card-body">
+            <!-- Form -->
+            <form [formGroup]="passwordForm" (ngSubmit)="onUpdatePassword()">
+              <!-- Current password -->
+              <div class="mb-3">
+                <label class="form-label">Current password</label>
+                <input class="form-control" type="password" formControlName="currentPassword" placeholder="Enter current password">
+              </div>
+              <!-- New password -->
+              <div class="mb-3">
+                <label class="form-label">Enter new password</label>
+                <div class="input-group">
+                  <input class="form-control" type="password" formControlName="newPassword" placeholder="Enter new password">
+                  <span class="input-group-text p-0 bg-transparent">
+                    <i class="far fa-eye cursor-pointer p-2 w-40px" (click)="toggleNewPassword()"></i>
+                  </span>
+                </div>
+                <div class="rounded mt-1" id="psw-strength"></div>
+              </div>
+              <!-- Confirm password -->
+              <div>
+                <label class="form-label">Confirm new password</label>
+                <input class="form-control" type="password" formControlName="confirmPassword" placeholder="Confirm new password">
+              </div>
+              <!-- Button -->
+              <div class="d-flex justify-content-end mt-4">
+                <button type="submit" class="btn btn-primary mb-0">Change password</button>
+              </div>
+              <p id="message" class="mt-3" *ngIf="message">{{ message }}</p>
+            </form>
+          </div>
+          <!-- Card body END -->
+        </div>
+      </div>
+      <!-- Password change end -->
+      
+    
+    
+    
+    </div>
+  </div>
